package DecisionEngine.Event;

public class BaseGameEvent {
    
}
